k8s/ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: myproject-ingress
    namespace: project
  spec:
    ingressClassName: nginx
    rules:
      - host: app.amakartsev.ru
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: myapp-service
                  port:
                    name: http-myapp
              path: /
      - host: grafana.amakartsev.ru
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: prometheus-grafana
                  port:
                    name: http-web
              path: /
